--- a/cg-dropdown.html
+++ b/cg-dropdown.html
@@ -13,7 +13,8 @@
         z-index: 1;
         outline: 0;
     }
-    .wrapper #select #header {
+    .wrapper #select #dd-content,
+    .wrapper #select #dd-header {
         margin: 5px;
     }
 
@@ -24,7 +25,6 @@
             <paper-material>
                 <div id="dd-header"><content select="[dd-header]"></content></div>
                 <div id="dd-menu"><content select="[dd-content]"></content></div>
-
             </paper-material>
         </iron-collapse>
     </div>
