--- a/cg-dropdown.html
+++ b/cg-dropdown.html
@@ -6,7 +6,7 @@
 <dom-module id="cg-dropdown">
     <style>
         :host {
-            @apply(--layout-relative)
+            @apply(--layout-relative);
         }
         .wrapper #select {
             position:absolute;
