--- a/cg-dropdown.html
+++ b/cg-dropdown.html
@@ -25,7 +25,7 @@
             <iron-collapse id="select">
                 <paper-material>
                     <div id="dd-header"><content select="[dd-header]"></content></div>
-                    <div id="dd-menu"><content select="[dd-content]"></content></div>
+                    <div id="dd-content"><content select="[dd-content]"></content></div>
                 </paper-material>
             </iron-collapse>
         </div>
